--- a/cf/i18n/resources/en-us.all.json
+++ b/cf/i18n/resources/en-us.all.json
@@ -3732,10 +3732,6 @@
     "translation": "Maximum number of routes that may be created with reserved ports (Default: 0)"
   },
   {
-    "id": "Maximum time (in seconds) for CLI to wait for application start, other server side timeouts may apply",
-    "translation": "Maximum time (in seconds) for CLI to wait for application start, other server side timeouts may apply"
-  },
-  {
     "id": "Memory",
     "translation": ""
   },
@@ -5546,6 +5542,10 @@
   {
     "id": "This will cause the app to restart. Are you sure you want to scale {{.AppName}}?",
     "translation": "This will cause the app to restart. Are you sure you want to scale {{.AppName}}?"
+  },
+  {
+    "id": "Time (in seconds) allowed to elapse between starting up an app and the first healthy response from the app",
+    "translation": "Time (in seconds) allowed to elapse between starting up an app and the first healthy response from the app"
   },
   {
     "id": "Timeout for async HTTP requests",
