--- a/cf/i18n/resources/es-es.all.json
+++ b/cf/i18n/resources/es-es.all.json
@@ -3732,10 +3732,6 @@
     "translation": "Número máximo de rutas que se pueden crear con puertos reservados (Valor predeterminado: 0)"
   },
   {
-    "id": "Maximum time (in seconds) for CLI to wait for application start, other server side timeouts may apply",
-    "translation": "Tiempo máximo (en segundos) para que el CLI espere el inicio de la aplicación; se pueden aplicar otros tiempos de espera del lado del servidor"
-  },
-  {
     "id": "Memory",
     "translation": ""
   },
@@ -5546,6 +5542,10 @@
   {
     "id": "This will cause the app to restart. Are you sure you want to scale {{.AppName}}?",
     "translation": "Esto hará que la app se reinicie. ¿Está seguro de que desea escalar {{.AppName}}?"
+  },
+  {
+    "id": "Time (in seconds) allowed to elapse between starting up an app and the first healthy response from the app",
+    "translation": "Tiempo máximo (en segundos) para que el CLI espere el inicio de la aplicación; se pueden aplicar otros tiempos de espera del lado del servidor"
   },
   {
     "id": "Timeout for async HTTP requests",
