--- a/cf/i18n/resources/fr-fr.all.json
+++ b/cf/i18n/resources/fr-fr.all.json
@@ -3732,10 +3732,6 @@
     "translation": "Nombre maximal de routes pouvant être créées avec des ports réservés (par défaut : 0)"
   },
   {
-    "id": "Maximum time (in seconds) for CLI to wait for application start, other server side timeouts may apply",
-    "translation": "Durée maximale (en secondes) pendant laquelle l'interface de ligne de commande attend qu'une application démarre ; d'autres délais d'attente côté serveur peuvent être appliqués"
-  },
-  {
     "id": "Memory",
     "translation": ""
   },
@@ -5546,6 +5542,10 @@
   {
     "id": "This will cause the app to restart. Are you sure you want to scale {{.AppName}}?",
     "translation": "L'application va redémarrer. Voulez-vous vraiment mettre à l'échelle {{.AppName}} ?"
+  },
+  {
+    "id": "Time (in seconds) allowed to elapse between starting up an app and the first healthy response from the app",
+    "translation": "Durée maximale (en secondes) pendant laquelle l'interface de ligne de commande attend qu'une application démarre ; d'autres délais d'attente côté serveur peuvent être appliqués"
   },
   {
     "id": "Timeout for async HTTP requests",
