--- a/cf/i18n/resources/zh-hans.all.json
+++ b/cf/i18n/resources/zh-hans.all.json
@@ -3732,10 +3732,6 @@
     "translation": "可使用保留端口创建的最大路径数（缺省值: 0）"
   },
   {
-    "id": "Maximum time (in seconds) for CLI to wait for application start, other server side timeouts may apply",
-    "translation": "CLI 等待应用程序启动的最长时间（秒），其他服务器端超时可能适用"
-  },
-  {
     "id": "Memory",
     "translation": ""
   },
@@ -5546,6 +5542,10 @@
   {
     "id": "This will cause the app to restart. Are you sure you want to scale {{.AppName}}?",
     "translation": "这将导致应用程序重新启动。确定要扩展 {{.AppName}} 吗？"
+  },
+  {
+    "id": "Time (in seconds) allowed to elapse between starting up an app and the first healthy response from the app",
+    "translation": "CLI 等待应用程序启动的最长时间（秒），其他服务器端超时可能适用"
   },
   {
     "id": "Timeout for async HTTP requests",
