improve error when refresh token is invalid
[finishes #139521365]

Signed-off-by: Matthew Boedicker <mboedicker@pivotal.io>

--- a/cf/i18n/resources/de-de.all.json
+++ b/cf/i18n/resources/de-de.all.json
@@ -5472,6 +5472,10 @@
     "translation": ""
   },
   {
+    "id": "The token expired, was revoked, or the token ID is incorrect. Please log back in to re-authenticate.",
+    "translation": "The token expired, was revoked, or the token ID is incorrect. Please log back in to re-authenticate."
+  },
+  {
     "id": "The token label",
     "translation": ""
   },
