--- a/cf/i18n/resources/it-it.untranslated.json
+++ b/cf/i18n/resources/it-it.untranslated.json
@@ -40,6 +40,10 @@
     "translation": ""
   },
   {
+    "id": "App {{.AppName}} is already started",
+    "translation": ""
+  },
+  {
     "id": "App {{.AppName}} not found",
     "translation": ""
   },
@@ -1076,6 +1080,10 @@
     "translation": ""
   },
   {
+    "id": "Start command:",
+    "translation": ""
+  },
+  {
     "id": "Stop all instances of the app, then start them again. This may cause downtime.",
     "translation": ""
   },
@@ -1565,6 +1573,10 @@
   },
   {
     "id": "{{.Message}}\nNote that this command requires CF API version 3.0.0+.",
+    "translation": ""
+  },
+  {
+    "id": "{{.Message}}\\n\\nTIP: Use '{{.BuildpackCommand}}' to see a list of supported buildpacks.",
     "translation": ""
   }
 ]
