--- a/cf/i18n/resources/es-es.all.json
+++ b/cf/i18n/resources/es-es.all.json
@@ -1212,7 +1212,7 @@
     "translation": ""
   },
   {
-    "id": "CF_NAME run-task APP_NAME COMMAND [--name TASK_NAME] [-m TASK_MEMORY]\\n\\nTIP:\\n   Use 'cf logs' to display the logs of the app and all its tasks. If your task name is unique, grep this command's output for the task name to view task-specific logs.\\n\\nEXAMPLES:\\n   CF_NAME run-task my-app \\\"bundle exec rake db:migrate\\\" --name migrate",
+    "id": "CF_NAME run-task APP_NAME COMMAND [--name TASK_NAME] [-m TASK_MEMORY] [-k TASK_DISK]\\n\\nTIP:\\n   Use 'cf logs' to display the logs of the app and all its tasks. If your task name is unique, grep this command's output for the task name to view task-specific logs.\\n\\nEXAMPLES:\\n   CF_NAME run-task my-app \\\"bundle exec rake db:migrate\\\" --name migrate",
     "translation": ""
   },
   {
