--- a/cf/i18n/resources/en-us.all.json
+++ b/cf/i18n/resources/en-us.all.json
@@ -1620,6 +1620,10 @@
     "translation": "CLI plugin management:"
   },
   {
+    "id": "COLOR must be \"true\" or \"false\"",
+    "translation": ""
+  },
+  {
     "id": "COMMAND",
     "translation": "COMMAND"
   },
@@ -4334,6 +4338,14 @@
   {
     "id": "RESPONSE:",
     "translation": "RESPONSE:"
+  },
+  {
+    "id": "ROLE must be \"OrgManager\", \"OrgDeveloper\" and \"OrgAuditor\"",
+    "translation": ""
+  },
+  {
+    "id": "ROLE must be \"SpaceManager\", \"SpaceDeveloper\" and \"SpaceAuditor\"",
+    "translation": ""
   },
   {
     "id": "ROLES:\n",
