--- a/cf/i18n/resources/pt-br.untranslated.json
+++ b/cf/i18n/resources/pt-br.untranslated.json
@@ -1128,6 +1128,10 @@
     "translation": "CLI plugin management:"
   },
   {
+    "id": "COLOR must be \"true\" or \"false\"",
+    "translation": ""
+  },
+  {
     "id": "COMMAND",
     "translation": "COMMAND"
   },
@@ -1462,6 +1466,14 @@
   {
     "id": "RESERVED_ROUTE_PORTS",
     "translation": "RESERVED_ROUTE_PORTS"
+  },
+  {
+    "id": "ROLE must be \"OrgManager\", \"OrgDeveloper\" and \"OrgAuditor\"",
+    "translation": ""
+  },
+  {
+    "id": "ROLE must be \"SpaceManager\", \"SpaceDeveloper\" and \"SpaceAuditor\"",
+    "translation": ""
   },
   {
     "id": "ROUTE_PATH",
